Ran 'debconf-updatepo' in order to update debian/po/* files.

--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2012-06-07 08:21+0200\n"
+"POT-Creation-Date: 2017-11-17 10:04-0500\n"
 "PO-Revision-Date: 2012-06-24 23:51+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <debian-l10n-danish@lists.debian.org>\n"
@@ -48,9 +48,9 @@ msgid ""
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost/ledgersmb/setup.pl."
 msgstr ""
-"Indtast venligst adgangskoden for LedgerSMB-databasens administrative bruger. "
-"Denne adgangskode er krævet for den administrative brugerflade på nettet, "
-"typisk på http://localhost/ledgersmb/setup.pl."
+"Indtast venligst adgangskoden for LedgerSMB-databasens administrative "
+"bruger. Denne adgangskode er krævet for den administrative brugerflade på "
+"nettet, typisk på http://localhost/ledgersmb/setup.pl."
 
 #. Type: boolean
 #. Description
@@ -75,6 +75,36 @@ msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
-"Mere generel information om startkonfigurationen af programmet kan ses i "
-"/usr/share/doc/ledgersmb/README.Debian."
+"Mere generel information om startkonfigurationen af programmet kan ses i /"
+"usr/share/doc/ledgersmb/README.Debian."
 
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid "Web Reverse Proxy to configure?"
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid ""
+"The LedgerSMB application now defaults to being made available on port 5762, "
+"and being run directly by Starman. If other access is needed, a Reverse "
+"Proxy can be configured using Apache or Nginx or Lighttpd or Varnish, or you "
+"can leave the choice as None if it is not needed or if the web proxy will be "
+"set up remotely."
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+#, fuzzy
+#| msgid ""
+#| "More general information about the initial configuration of the "
+#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
+msgid ""
+"For more details, please see the Web Proxy section that can be found in the /"
+"usr/share/doc/ledgersmb/README.Debian file."
+msgstr ""
+"Mere generel information om startkonfigurationen af programmet kan ses i /"
+"usr/share/doc/ledgersmb/README.Debian."
