--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb 1.3.15-3\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2012-06-07 08:21+0200\n"
+"POT-Creation-Date: 2017-11-17 10:04-0500\n"
 "PO-Revision-Date: 2012-06-08 20:14+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -76,6 +76,37 @@ msgstr ""
 msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
+msgstr ""
+"Дополнительную информацию о начальной настройке приложения можно найти в "
+"файле /usr/share/doc/ledgersmb/README.Debian."
+
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid "Web Reverse Proxy to configure?"
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid ""
+"The LedgerSMB application now defaults to being made available on port 5762, "
+"and being run directly by Starman. If other access is needed, a Reverse "
+"Proxy can be configured using Apache or Nginx or Lighttpd or Varnish, or you "
+"can leave the choice as None if it is not needed or if the web proxy will be "
+"set up remotely."
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+#, fuzzy
+#| msgid ""
+#| "More general information about the initial configuration of the "
+#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
+msgid ""
+"For more details, please see the Web Proxy section that can be found in the /"
+"usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
 "Дополнительную информацию о начальной настройке приложения можно найти в "
 "файле /usr/share/doc/ledgersmb/README.Debian."
