--- a/debian/po/templates.pot
+++ b/debian/po/templates.pot
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the ledgersmb package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2012-06-07 08:21+0200\n"
+"POT-Creation-Date: 2017-11-17 10:04-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -67,4 +67,29 @@ msgstr ""
 msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid "Web Reverse Proxy to configure?"
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid ""
+"The LedgerSMB application now defaults to being made available on port 5762, "
+"and being run directly by Starman. If other access is needed, a Reverse "
+"Proxy can be configured using Apache or Nginx or Lighttpd or Varnish, or you "
+"can leave the choice as None if it is not needed or if the web proxy will be "
+"set up remotely."
+msgstr ""
+
+#. Type: select
+#. Description
+#: ../templates:5001
+msgid ""
+"For more details, please see the Web Proxy section that can be found in the /"
+"usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
