--- a/debian/TODO
+++ b/debian/TODO
@@ -6,30 +6,61 @@ https://qa.debian.org/debcheck.php?dist=unstable&package=ledgersmb
 https://github.com/ledgersmb/pkg-ledgersmb/issues/1
 ===================================================================================================
 ===================================================================================================
-- The ledgersmb.org site has v1.5 screen shots at https://ledgersmb.org/content/screenshots-15;
+	- In debian/control;  shouldn't this now be optional, per policy?
+Priority: extra
+
+-----------------------------------------------------------------------------------------------------
+	- If these turn out to have worked for the ledgersmb-1.5 pkg, adapt from there:
+ 
+$ git ci -m "Add a debian/ledgersmb-1.5.default file for package default settings."
+$ git ci -m "Separate out the 'GPL' license stanza in the debian/copyright file."	(if necessary)
+$ git ci -m "Add stanza for 'debian/ledgersmb-1.5.default' to debian/copyright."
+$ git ci -m "Initial change to 15_lsmb-service.patch to use 'EnvironmentFile' setting."
+$ git ci -m "Change how 'WORKING_DIRECTORY' is set in starman-ledgersmb.service patch."
+
+-----------------------------------------------------------------------------------------------------
+ The ledgersmb.org site has v1.5 screen shots at https://ledgersmb.org/content/screenshots-15;
  update debian for them, at least after I get the ledgersmb pkg updated and uploaded
  at http://screenshots.debian.net/package/ledgersmb.  (And get the old 1.3 
  screenshots removed.)
 
-----------------------------------------------------------------------------------------------------
-	- Looks like an Lighttpd configuration example is going to be added.  If/when
-	it's also added the 1.5, add another binary stanza for it to go along with
-	the ones for nginx and apache.
-Add Lighttpd configuration example #2993
-https://github.com/ledgersmb/LedgerSMB/pull/2993
-https://github.com/ledgersmb/LedgerSMB/issues/3007
-https://github.com/ledgersmb/LedgerSMB/issues/3008
+
+-----------------------------------------------------------------------------------
+https://github.com/ledgersmb/LedgerSMB/issues/3272
+
+While testing an updated package for LedgerSMB 1.5.13 which includes setting up 
+Apache as a web proxy for LedgerSMB (ledgersmb-1.5-apache), i found that I could 
+not leave the SSLRequireSSL in the apache-vhost.conf (as installed by the package)
+file and try to that new configuration online without resulting in an error like
+the following (from: systemctl status apache2.service).
+
+Nov 11 00:57:05 lsmbtest apachectl[13212]: AH00526: Syntax error on line 32 of /etc/apache2/sites-enabled/ledgersmb-1.5-proxy.conf:
+Nov 11 00:57:05 lsmbtest apachectl[13212]: SSLRequireSSL not allowed here
+Nov 11 00:57:05 lsmbtest apachectl[13212]: Action 'start' failed.
+
+-------------------------------------------------------------------------------
+
+-> Separately;  if upgradeing from anything before 1.5.0, apache will already
+ be installed because for those previous versions Apache was required. So in 
+ that special case, default the question to Apache instead of None?
+ 
+
+-> I don't think I actually added code to the script that used #LSMBPROXY for
+   anything in part because I'd been looking for a way to get the web proxy app
+   installed from the script & hadn't found a way to that. So will still need
+   to add that.
+
 -------------------------------------------------------------------------------
 	- Discussed in IRC some of the permission fix issues.  Erik took care of
 	fixing many of them in both master & 1.5 so when the next release comes out
-	will need to run a build of both ledgresmb & ledgersmb-1.5 without the 
+	will need to run a build of both ledgersmb & ledgersmb-1.5 without the 
 	fixes enabled in order to check how the fix permissions stanza in d/rules
 	can be updated for that.
 
   - Referance also https://github.com/ledgersmb/LedgerSMB/issues/2899 which 
   for the creation of a test in upstream that checks for such permission issues.
 
-- As of the packageing for 1.5.8, this is what is in the override_dh_fixperms
+- As of the packageing for 1.5.10, this is what is in the override_dh_fixperms
   stanza
 <-->dh_fixperms
 <-->chmod +x debian/ledgersmb-1.5/usr/share/ledgersmb-1.5/sql/modules/reload_modules.sh
@@ -55,20 +86,21 @@ Although Debian (and others) do now use systemd by default, it does still suppor
 init.d scripts as well, so providing at least an example init.d sysvinit startup script
  for starman-ledgersmb would be quite useful.
 
-- In the mean time, added an initial version of a possible one:
-(In order to test how that works, would have to use something that has been
-changed to use sysv instead of systemd.)
-
+- In the mean time, added an initial version of a possible version of the file,
+which will need to be removed when it becomes available in upstream.
+(In order to test how it works, one needs to use something that has been
+changed to use sysvinit by default instead of systemd, which is the default
+on stretch and was also availalbe on jessie.)
 
 -------------------------------------------------------------------------------
     - debian/adm/config-lsmb-db-user.sh
-- Use 'pg_roles' and 'rolname' rather than 'pg_users' and 'usename', as I 
-found that one can actually create two roles with the same name, one with the
-login attribute and one without.
+
 - Use only the postgresql tools, like createuser, to set the user name and 
 password for the LSMB DB Admin user.  David G pointed out that using SQL
 can allow the unencrypted password to prehaps show up in logs, etc, which
-is a security concern.
+is a security concern.  One thing though; the sql is used to check for
+the existance of the user and then update or recreate.  Don't know if
+that can be duplicated just using the postgresql tools directly.
 - Take out defaulting for doing the SQL 'ALTER' instead of a 'CREATE'
 if the LSMB DBAdmin user already exits.  It was pointed out by both David
 and Erik that they really don't think it's a good idea to reset that password
@@ -78,36 +110,47 @@ user ID already exists, but not by default; would have to explicitly agree
 to it, each time, and that agreement isn't saved so the question gets asked
 each time and by default is not to do the reset.
 
+	- see also: admin user password change
+https://github.com/ledgersmb/LedgerSMB/issues/2717
+
 -----------------------------------------------------------------------------------
 
 I: ledgersmb: systemd-service-file-missing-documentation-key lib/systemd/system/starman-ledgersmb.service
 
-------------------------------------------------------------------------------
-	- These are needed, or at least would be useful to have, in Debian
-	
-Weasel is needed for at least developer testing.  (Started that...)
-Pherkin::Extension::Weasel  is needed for at least developer testing.
-
-	- Need to check the rest of the 'develop' type requirements to see which
-	are already in the Debian and perhaps pkg the (other) ones that are not.
-
-- while checking for the Build-Depends-Indep;  found that I don't even have it
-in the pkg for ledgersmb-1.5 or ledgesrmb-1.4. Although that may simply be that
-it's not needed. 
-  
-
 -----------------------------------------------------------------------------------
 https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=868724
-`- Project has totally moved from SourceForge.net, so debian/watch needs to be
-`updated for the new locations of the distribution archive and its detached
-gpg file for verifiction.
+	- Project has totally moved from SourceForge.net, so debian/watch needs to be
+updated for the new locations of the distribution archive and its detached gpg file
+for verifiction. An update for getting the new archive itself appears to have been 
+successful but the *.asc associated with it used for the gpg verification does not 
+seem to get refereneced properly and so step fails.
 
-- An update for gettting the new archive itself appears to have been successful
-but the *.asc associated with it useed for the gpg verification does not seem
-to get refereneced properly has that step fails.
+-----------------------------------------------------------------------------------
+  - Use a separate source tarball for the UI/js directories?  Devs have discussed
+it some but nothing has come of it as yet. If it's provided, then a way to bypass
+all (330) source-is-missing lintian errors could be to use the multiple upstream
+tarballs functionality that's available in the debian pkg format being used.
 
-- debian/watch: expand the uversionmangle regular expression to exclude the v1.2,
-1.3, and 1.5 versions.
+https://wiki.debian.org/Projects/DebSrc3.0
+https://raphaelhertzog.com/2010/09/07/how-to-use-multiple-upstream-tarballs-in-debian-source-packages/  
+
+google search: debian package multiple source files
+
+
+dcg_mx (3 Sep 2017)
+jame_mx: well, even if the underlying dojo version matched (unlikely unless multiple 
+versions can be installed and currently used easily)
+There is still the issue that we compile the payload using uglify for performance reasons.
+and it's not as simple as dojo being available already uglified.
+As that process is dependent on being run from within our codebase as it potentially 
+includes part of our code, and should exclude dojo elements that we don't use
+J
+jame_mx
+23:11
+dcg_mx: <shrug> I'll be looking at all that again when/if the dojo package in Debian 
+gets updated. (which reminds me; I need to check with them about what going on the 
+dojo pkg.
+
 
 -----------------------------------------------------------------------------------
 	- updating debconf po
@@ -121,17 +164,44 @@ those lists come from the same source. It can be added manually using
 System|Language|Add Language. Debian bug # 831688.
 -----------------------------------------------------------------------------------
 
+- Currently have texlive-latex-recommended as a Recommends but that pulls a lot of
+of other pkgs in and takes a lot of space, and is only there regarding being able
+to print to PDF.  Options for how to that have/are being discussed, like modules
+or apps to print from html to pdf.  Once that has been implenmented, move the
+texlive requirement from Recommends to Suggests and add some info about it to the
+README.Debian
+- Note that what has been discussed for an alternate default for printing has
+been 'wkhtml2pdf'.
+
+-----------------------------------------------------------------------------------
+	- docomentation related changes that were done for legersmb-1.5 pkg:
+$ git ci -m "Add 'db-changes' to and also sort the debian/ledgersmb-1.5.docs file."
+$ git ci -m "Add a debian/ledgersmb-1.5.doc-base.coding-standard file."
+$ git ci -m "Add a debian/ledgersmb-1.5.doc-base.db-changes file."
+
+
 - Upstream uses pdflatex to create the distribution LedgerSMB-manual.pdf from
 the source file doc/manual/LedgerSMB-manual.tex. Use the same source file to
 create an HTML version?
------------------------------------------------------------------------------------
+
 - Create an HTML and/or PDF file of doc/templateing/templating-guide.tex? And
 then register it with doc-base?
 
 - Instead of a sym link to point to the /etc/ledgersmb config file(s), 
 patch config file to add '/etc/' to the config file setting? (Would
 the apache config also need to be updated to allow that?)
+
+-------------------------------------------------------------------------------
+  - Interesting enough; this is available for Config::Model
+https://metacpan.org/release/Config-Model-Systemd
+  -> It's been in Debian since Stretch
+  https://packages.debian.org/source/sid/libconfig-model-systemd-perl
+
+  - So if there is a need to do a debconf update for the service file, will
+  be able to do so.
+- Being able to update the service file for the LSMB Starman port from the 
+postinstall script may be quite useful. Investigate?
 -----------------------------------------------------------------------------------
 
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 18 Jul 2017 16:53 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 17 Nov 2017 10:06 -0500
