Ran 'debconf-updatepo' in order to update the debian/po/* files.

--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2017-11-17 10:04-0500\n"
+"POT-Creation-Date: 2017-11-25 09:41-0500\n"
 "PO-Revision-Date: 2012-06-07 20:39+0100\n"
 "Last-Translator: Martin Bagge / brother <brother@bsnet.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
@@ -27,10 +27,15 @@ msgstr "Administrativ användare för databasen:"
 #. Type: string
 #. Description
 #: ../templates:2001
+#, fuzzy
+#| msgid ""
+#| "Please enter the login of the LedgerSMB database administrative user. "
+#| "This login is needed for the administrative web user interface, typically "
+#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
-"http://localhost/ledgersmb/setup.pl."
+"http://localhost:5762/setup.pl."
 msgstr ""
 "Ange användarnamnet för administration av LedgerSMB-databasen. "
 "Användarnamnet behövs för det administrativa webbgränssnittet, vanligen "
@@ -45,10 +50,15 @@ msgstr "Lösenord för databasens administrativa användare:"
 #. Type: password
 #. Description
 #: ../templates:3001
+#, fuzzy
+#| msgid ""
+#| "Please enter the password of the LedgerSMB database administrative user. "
+#| "This password is needed for the administrative web user interface, "
+#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
-"at http://localhost/ledgersmb/setup.pl."
+"at http://localhost:5762/setup.pl."
 msgstr ""
 "Ange lösenordet för LedgerSMBs administrativa användare. Lösenordet behövs "
 "för det administrativa webbgränssnittet, vanligen tillgängligt på http://"
@@ -57,15 +67,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
-msgid "Configure LedgerSMB automatically?"
+#, fuzzy
+#| msgid "Configure LedgerSMB automatically?"
+msgid "Configure LedgerSMB Database administrative user automatically?"
 msgstr "Ska inställningar för LedgerSMB göras automatiskt?"
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "The configuration program for the package can automatically configure "
+#| "some aspects of LedgerSMB, such as the LedgerSMB database user."
 msgid ""
-"The configuration program for the package can automatically configure some "
-"aspects of LedgerSMB, such as the LedgerSMB database user."
+"The configuration program for the package can automatically configure the "
+"LedgerSMB database user. Enable if you want to do that, disable if not."
 msgstr ""
 "Konfigurationsprogrammet för paketet kan göra automatiska inställningar för "
 "vissa delar av LedgerSMB, exempelvis LedgerSMBs databasanvändare."
@@ -73,8 +89,12 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "More general information about the initial configuration of the "
+#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
-"More general information about the initial configuration of the application "
+"More information about the configuration of the database administrative user "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
 "Mer generell information om de grundläggande inställningarna av "
