--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -31,7 +31,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb 1.3.15-3\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2017-11-17 10:04-0500\n"
+"POT-Creation-Date: 2017-11-25 09:41-0500\n"
 "PO-Revision-Date: 2012-06-17 16:00+0200\n"
 "Last-Translator: Camaleón <noelamac@gmail.com>\n"
 "Language-Team: Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -49,10 +49,15 @@ msgstr "Nombre del usuario administrador de la base de datos:"
 #. Type: string
 #. Description
 #: ../templates:2001
+#, fuzzy
+#| msgid ""
+#| "Please enter the login of the LedgerSMB database administrative user. "
+#| "This login is needed for the administrative web user interface, typically "
+#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
-"http://localhost/ledgersmb/setup.pl."
+"http://localhost:5762/setup.pl."
 msgstr ""
 "Introduzca el nombre del usuario administrador de la base de datos de "
 "LedgerSMB. Este usuario es necesario para el acceso como administrador a la "
@@ -67,10 +72,15 @@ msgstr "Contraseña del usuario administrador de la base de datos:"
 #. Type: password
 #. Description
 #: ../templates:3001
+#, fuzzy
+#| msgid ""
+#| "Please enter the password of the LedgerSMB database administrative user. "
+#| "This password is needed for the administrative web user interface, "
+#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
-"at http://localhost/ledgersmb/setup.pl."
+"at http://localhost:5762/setup.pl."
 msgstr ""
 "Introduzca la contraseña del usuario administrador de la base de datos de "
 "LedgerSMB. Esta contraseña es necesaria para el acceso como administrador a "
@@ -79,15 +89,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
-msgid "Configure LedgerSMB automatically?"
+#, fuzzy
+#| msgid "Configure LedgerSMB automatically?"
+msgid "Configure LedgerSMB Database administrative user automatically?"
 msgstr "¿Desea configurar LedgerSMB automáticamente?"
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "The configuration program for the package can automatically configure "
+#| "some aspects of LedgerSMB, such as the LedgerSMB database user."
 msgid ""
-"The configuration program for the package can automatically configure some "
-"aspects of LedgerSMB, such as the LedgerSMB database user."
+"The configuration program for the package can automatically configure the "
+"LedgerSMB database user. Enable if you want to do that, disable if not."
 msgstr ""
 "El asistente de configuración de este paquete permite configurar "
 "automáticamente algunos aspectos de LedgerSMB, como el usuario de la base de "
@@ -96,8 +112,12 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "More general information about the initial configuration of the "
+#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
-"More general information about the initial configuration of the application "
+"More information about the configuration of the database administrative user "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
 "Puede encontrar información general sobre la configuración inicial de la "
