--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2017-11-17 10:04-0500\n"
+"POT-Creation-Date: 2017-11-25 09:41-0500\n"
 "PO-Revision-Date: 2012-06-07 15:29+0200\n"
 "Last-Translator: Michał Kułach <michal.kulach@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
@@ -28,10 +28,15 @@ msgstr "Login użytkownika administrującego bazą danych:"
 #. Type: string
 #. Description
 #: ../templates:2001
+#, fuzzy
+#| msgid ""
+#| "Please enter the login of the LedgerSMB database administrative user. "
+#| "This login is needed for the administrative web user interface, typically "
+#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
-"http://localhost/ledgersmb/setup.pl."
+"http://localhost:5762/setup.pl."
 msgstr ""
 "Proszę podać login użytkownika administrującego bazą danych LedgerSMB. Jest "
 "on potrzebny do interfejsu administracyjnego WWW, który znajduje się "
@@ -46,10 +51,15 @@ msgstr "Hasło użytkownika administrującego bazą danych:"
 #. Type: password
 #. Description
 #: ../templates:3001
+#, fuzzy
+#| msgid ""
+#| "Please enter the password of the LedgerSMB database administrative user. "
+#| "This password is needed for the administrative web user interface, "
+#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
-"at http://localhost/ledgersmb/setup.pl."
+"at http://localhost:5762/setup.pl."
 msgstr ""
 "Proszę podać hasło użytkownika administrującego bazą danych LedgerSMB. Jest "
 "on potrzebny do interfejsu administracyjnego WWW, który znajduje się "
@@ -58,15 +68,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
-msgid "Configure LedgerSMB automatically?"
+#, fuzzy
+#| msgid "Configure LedgerSMB automatically?"
+msgid "Configure LedgerSMB Database administrative user automatically?"
 msgstr "Skonfigurować LedgerSMB w sposób automatyczny?"
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "The configuration program for the package can automatically configure "
+#| "some aspects of LedgerSMB, such as the LedgerSMB database user."
 msgid ""
-"The configuration program for the package can automatically configure some "
-"aspects of LedgerSMB, such as the LedgerSMB database user."
+"The configuration program for the package can automatically configure the "
+"LedgerSMB database user. Enable if you want to do that, disable if not."
 msgstr ""
 "Program konfiguracyjny z pakietu może automatycznie skonfigurować niektóre "
 "aspekty LedgerSMB np. użytkownika bazy danych LedgerSMB."
@@ -74,8 +90,12 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "More general information about the initial configuration of the "
+#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
-"More general information about the initial configuration of the application "
+"More information about the configuration of the database administrative user "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
 "Więcej ogólnych informacji na temat początkowej konfiguracji aplikacji "
