--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb 1.3.15-3\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2017-11-17 10:04-0500\n"
+"POT-Creation-Date: 2017-11-25 09:41-0500\n"
 "PO-Revision-Date: 2012-06-08 20:14+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -27,10 +27,15 @@ msgstr "Учётная запись администратора баз данн
 #. Type: string
 #. Description
 #: ../templates:2001
+#, fuzzy
+#| msgid ""
+#| "Please enter the login of the LedgerSMB database administrative user. "
+#| "This login is needed for the administrative web user interface, typically "
+#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
-"http://localhost/ledgersmb/setup.pl."
+"http://localhost:5762/setup.pl."
 msgstr ""
 "Введите учётную запись администратора базы данных LedgerSMB. Эта запись "
 "требуется для веб-интерфейса управления, обычно располагающегося по адресу "
@@ -45,10 +50,15 @@ msgstr "Пароль к административной учётной запи
 #. Type: password
 #. Description
 #: ../templates:3001
+#, fuzzy
+#| msgid ""
+#| "Please enter the password of the LedgerSMB database administrative user. "
+#| "This password is needed for the administrative web user interface, "
+#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
-"at http://localhost/ledgersmb/setup.pl."
+"at http://localhost:5762/setup.pl."
 msgstr ""
 "Введите пароль к учётной записи администратора базы данных LedgerSMB. Этот "
 "пароль требуется для веб-интерфейса управления, обычно располагающегося по "
@@ -57,15 +67,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
-msgid "Configure LedgerSMB automatically?"
+#, fuzzy
+#| msgid "Configure LedgerSMB automatically?"
+msgid "Configure LedgerSMB Database administrative user automatically?"
 msgstr "Настроить LedgerSMB автоматически?"
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "The configuration program for the package can automatically configure "
+#| "some aspects of LedgerSMB, such as the LedgerSMB database user."
 msgid ""
-"The configuration program for the package can automatically configure some "
-"aspects of LedgerSMB, such as the LedgerSMB database user."
+"The configuration program for the package can automatically configure the "
+"LedgerSMB database user. Enable if you want to do that, disable if not."
 msgstr ""
 "Программа настройки пакета может автоматически настроить некоторые параметры "
 "LedgerSMB, такие как учётная запись базы данных LedgerSMB."
@@ -73,8 +89,12 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../templates:4001
+#, fuzzy
+#| msgid ""
+#| "More general information about the initial configuration of the "
+#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
-"More general information about the initial configuration of the application "
+"More information about the configuration of the database administrative user "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
 "Дополнительную информацию о начальной настройке приложения можно найти в "
