--- a/debian/po/templates.pot
+++ b/debian/po/templates.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
-"POT-Creation-Date: 2017-11-17 10:04-0500\n"
+"POT-Creation-Date: 2017-11-25 09:41-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgstr ""
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
-"http://localhost/ledgersmb/setup.pl."
+"http://localhost:5762/setup.pl."
 msgstr ""
 
 #. Type: password
@@ -44,28 +44,28 @@ msgstr ""
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
-"at http://localhost/ledgersmb/setup.pl."
+"at http://localhost:5762/setup.pl."
 msgstr ""
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
-msgid "Configure LedgerSMB automatically?"
-msgstr ""
-
-#. Type: boolean
-#. Description
-#: ../templates:4001
-msgid ""
-"The configuration program for the package can automatically configure some "
-"aspects of LedgerSMB, such as the LedgerSMB database user."
+msgid "Configure LedgerSMB Database administrative user automatically?"
 msgstr ""
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
 msgid ""
-"More general information about the initial configuration of the application "
+"The configuration program for the package can automatically configure the "
+"LedgerSMB database user. Enable if you want to do that, disable if not."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid ""
+"More information about the configuration of the database administrative user "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
 
